update-link(login)

--- a/FPTEcommerce/src/main/resources/static/css/base.css
+++ b/FPTEcommerce/src/main/resources/static/css/base.css
@@ -5,7 +5,56 @@
   margin: 0;
   box-sizing: inherit;
 }
+.preloader {
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 999999999;
+	width: 100%;
+	height: 100%;
+	background-color: #fff;
+	overflow: hidden;
+}
 
+.preloader-inner {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	-moz-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+}
+
+.preloader-icon {
+	width: 100px;
+	height: 100px;
+	display: inline-block;
+	padding: 0px;
+}
+
+.preloader-icon span {
+	position: absolute;
+	display: inline-block;
+	width: 100px;
+	height: 100px;
+	border-radius: 100%;
+	background: #F7941D;
+	-webkit-animation: preloader-fx 1.6s linear infinite;
+	animation: preloader-fx 1.6s linear infinite;
+}
+
+.preloader-icon span:last-child {
+	animation-delay: -0.8s;
+	-webkit-animation-delay: -0.8s;
+}
+@keyframes preloader-fx  { 
+	0% {transform: scale(0, 0); opacity: 0.5;}
+	100% {transform:scale(1,1); opacity:0;}
+	}
+@-webkit-keyframes preloader-fx { 
+	0% {-webkit-transform: scale(0, 0);opacity: 0.5;}
+    100%{-webkit-transform:scale(1,1);opacity:0;}
+}
 html {
   font-size: 62.5%;
   line-height: 1.4rem;
@@ -40,8 +89,11 @@ body {
   background-color: var(--white);
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
-
 .category-item {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 1.4rem;
   font-weight: 500;
 }
@@ -345,12 +397,16 @@ button.swiper-pagination-bullet {
   transform: translate3d(0, -50%, 0);
 }
 
-.swiper-container-vertical > .swiper-pagination-bullets .swiper-pagination-bullet {
+.swiper-container-vertical
+  > .swiper-pagination-bullets
+  .swiper-pagination-bullet {
   margin: 5px 0;
   display: block;
 }
 
-.swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
+.swiper-container-horizontal
+  > .swiper-pagination-bullets
+  .swiper-pagination-bullet {
   margin: 0 5px;
 }
 
@@ -372,7 +428,9 @@ button.swiper-pagination-bullet {
   transform-origin: left top;
 }
 
-.swiper-container-rtl .swiper-pagination-progress .swiper-pagination-progressbar {
+.swiper-container-rtl
+  .swiper-pagination-progress
+  .swiper-pagination-progressbar {
   -webkit-transform-origin: right top;
   transform-origin: right top;
 }
@@ -395,11 +453,13 @@ button.swiper-pagination-bullet {
   background: rgba(255, 255, 255, 0.5);
 }
 
-.swiper-pagination-progress.swiper-pagination-white .swiper-pagination-progressbar {
+.swiper-pagination-progress.swiper-pagination-white
+  .swiper-pagination-progressbar {
   background: #fff;
 }
 
-.swiper-pagination-progress.swiper-pagination-black .swiper-pagination-progressbar {
+.swiper-pagination-progress.swiper-pagination-black
+  .swiper-pagination-progressbar {
   background: #000;
 }
 
@@ -441,8 +501,16 @@ button.swiper-pagination-bullet {
     from(rgba(0, 0, 0, 0.5)),
     to(rgba(0, 0, 0, 0))
   );
-  background-image: -webkit-linear-gradient(right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
-  background-image: linear-gradient(to left, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+  background-image: -webkit-linear-gradient(
+    right,
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0)
+  );
+  background-image: linear-gradient(
+    to left,
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0)
+  );
 }
 
 .swiper-container-3d .swiper-slide-shadow-right {
@@ -453,8 +521,16 @@ button.swiper-pagination-bullet {
     from(rgba(0, 0, 0, 0.5)),
     to(rgba(0, 0, 0, 0))
   );
-  background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+  background-image: -webkit-linear-gradient(
+    left,
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0)
+  );
+  background-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0)
+  );
 }
 
 .swiper-container-3d .swiper-slide-shadow-top {
@@ -465,8 +541,16 @@ button.swiper-pagination-bullet {
     from(rgba(0, 0, 0, 0.5)),
     to(rgba(0, 0, 0, 0))
   );
-  background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
-  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+  background-image: -webkit-linear-gradient(
+    bottom,
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0)
+  );
+  background-image: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0)
+  );
 }
 
 .swiper-container-3d .swiper-slide-shadow-bottom {
@@ -477,8 +561,16 @@ button.swiper-pagination-bullet {
     from(rgba(0, 0, 0, 0.5)),
     to(rgba(0, 0, 0, 0))
   );
-  background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+  background-image: -webkit-linear-gradient(
+    top,
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0)
+  );
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0)
+  );
 }
 
 .swiper-container-coverflow .swiper-wrapper,
@@ -747,10 +839,13 @@ button.swiper-pagination-bullet {
 }
 
 .swiper-pagination-bullet-active {
-  background: rgba(0, 0, 0, 0) -webkit-linear-gradient(left, #ee0f6f 0%, #f89482 100%) repeat
-    scroll 0 0;
-  background: rgba(0, 0, 0, 0) linear-gradient(to right, #ee0f6f 0%, #f89482 100%) repeat
-    scroll 0 0;
+  background: rgba(0, 0, 0, 0) -webkit-linear-gradient(
+      left,
+      #ee0f6f 0%,
+      #f89482 100%
+    ) repeat scroll 0 0;
+  background: rgba(0, 0, 0, 0)
+    linear-gradient(to right, #ee0f6f 0%, #f89482 100%) repeat scroll 0 0;
   border: medium none;
   height: 12px;
   opacity: 1;
@@ -902,7 +997,11 @@ button.swiper-pagination-bullet {
   align-items: center;
   gap: 0 20px;
 }
+.header-bottom-left {
+  width: 20%;
+}
 .header-bottom-center {
+  /* margin-left:-90px !; */
   margin: 0 auto;
 }
 .header-bottom-center input {
@@ -931,6 +1030,7 @@ button.swiper-pagination-bullet {
   -webkit-text-fill-color: transparent;
 }
 .header-bottom-right-items.user {
+  justify-content: center !important;
   display: flex;
   align-items: center;
   gap: 0 10px;
@@ -947,14 +1047,20 @@ button.swiper-pagination-bullet {
   font-weight: 500;
 }
 .header-bottom-right-item {
-  padding: 12px 15px;
+  width: 40px;
+  height: 40px;
+  padding: 10px 12px;
   background-color: var(--bg-small);
   /* circle */
   border-radius: 50%;
 }
 .header-bottom-right-item i {
-  font-size: 1.9rem;
+  font-size: 1.7rem;
   color: var(--text-color);
+}
+.header-bottom-right-items:hover,
+.header-bottom-right-item i:hover {
+  color: #ca56c8;
 }
 
 .product {
@@ -1674,7 +1780,6 @@ button.swiper-pagination-bullet {
 }
 
 .button.primary {
-  width: 150px;
   margin: auto;
   height: 36px;
   padding: 7px 20px 8px;
@@ -1703,6 +1808,11 @@ button.swiper-pagination-bullet {
   letter-spacing: 0.02em;
   margin: 0 8px;
   text-align: center;
+}
+.button.primary:hover {
+  transform: translateY(-2px);
+  transition: all 0.3s ease;
+  opacity: 0.8;
 }
 
 :root {
@@ -1737,11 +1847,25 @@ button.swiper-pagination-bullet {
     ),
     radial-gradient(circle farthest-corner at 0 140%, #fec564, transparent 50%),
     radial-gradient(ellipse farthest-corner at 0 -25%, #5258cf, transparent 50%),
-    radial-gradient(ellipse farthest-corner at 20% -50%, #5258cf, transparent 50%),
+    radial-gradient(
+      ellipse farthest-corner at 20% -50%,
+      #5258cf,
+      transparent 50%
+    ),
     radial-gradient(ellipse farthest-corner at 100% 0, #893dc2, transparent 50%),
-    radial-gradient(ellipse farthest-corner at 60% -20%, #893dc2, transparent 50%),
+    radial-gradient(
+      ellipse farthest-corner at 60% -20%,
+      #893dc2,
+      transparent 50%
+    ),
     radial-gradient(ellipse farthest-corner at 100% 100%, #d9317a, transparent),
-    linear-gradient(#6559ca, #bc318f 30%, #e33f5f 50%, #f77638 70%, #fec66d 100%);
+    linear-gradient(
+      #6559ca,
+      #bc318f 30%,
+      #e33f5f 50%,
+      #f77638 70%,
+      #fec66d 100%
+    );
 }
 .mt-1 {
   margin-top: 1.5rem;
@@ -1882,4 +2006,150 @@ button.swiper-pagination-bullet {
   border-bottom: 4px solid #ff0055;
   transition: all 0.3s cubic-bezier(0.39, 0.575, 0.565, 1);
   animation: 0.5s spin infinite;
+}
+.category__dropdown {
+  position: fixed;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #d3d5d6;
+  gap: 1rem;
+  padding: 14rem 4rem 0;
+  z-index: -1;
+}
+.dropdown__list--category {
+  margin-bottom: 1.5rem;
+}
+.dropdown__item--category {
+  padding: 0.5rem 0 0.5rem 4rem;
+  line-height: 1.5;
+  font-size: 1.3rem;
+}
+.dropdown__list--category li:first-child {
+  position: relative;
+  background: linear-gradient(45deg, #e7e7e7, #e7e7e7, #d3d5d6 90%);
+  font-size: 1.4rem;
+  font-weight: 700;
+  padding: 0.8rem 0 0.8rem 0;
+}
+.dropdown__list--category li:first-child a {
+  display: grid;
+  grid-template-columns: 4rem auto;
+  align-items: center;
+}
+.dropdown__list--category li:first-child a i {
+  justify-self: center;
+  color: var(--text-color);
+}
+.dropdown__list--category li:first-child a span {
+  width: fit-content;
+}
+.dropdown__list--category li:first-child::before {
+  content: "";
+  position: absolute;
+  top: calc(20% / 2);
+  left: 0;
+  background: var(--theme-color);
+  width: 2px;
+  height: 80%;
+}
+.dropdown__item--category.text-hover:hover i {
+  color: #101010;
+}
+.category__dropdown-wrapper {
+  display: none;
+}
+.category-item:hover > .category__dropdown-wrapper {
+  display: block;
+}
+
+.profile {
+  height: inline;
+  display: flex;
+}
+.profile-right {
+  padding-top: 5px;
+  margin-left: 10px;
+  justify-content: center;
+  display: flex;
+}
+.action .menu {
+  position: absolute;
+  top: 120px;
+  right: -10px;
+  padding: 10px 20px;
+  background: #fff;
+  width: 200px;
+  box-sizing: 0 5px 25px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  transition: 0.5s;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.action .menu.active {
+  right: 10px;
+  top: 80px;
+  visibility: visible;
+  opacity: 1;
+}
+
+.action .menu::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  right: 60px;
+  width: 20px;
+  height: 20px;
+  background: #fff;
+  transform: rotate(45deg);
+}
+
+.action .menu h3 {
+  width: 100%;
+  text-align: center;
+  font-size: 18px;
+  padding: 20px 0;
+  font-weight: 500;
+  color: #555;
+  line-height: 1.5em;
+}
+
+.action .menu h3 span {
+  font-size: 14px;
+  color: #cecece;
+  font-weight: 300;
+}
+
+.action .menu ul li {
+  list-style: none;
+  padding: 16px 0;
+  display: flex;
+  align-items: center;
+}
+
+.border-top {
+  border-top: 1px solid rgba(0, 0, 0, 0.05);
+}
+
+.action .menu ul li img {
+  max-width: 20px;
+  margin-right: 10px;
+  opacity: 0.5;
+  transition: 0.5s;
+}
+
+.action .menu ul li:hover img {
+  opacity: 1;
+}
+
+.action .menu ul li a {
+  display: inline-block;
+  text-decoration: none;
+  color: #555;
+  font-weight: 500;
+  transition: 0.5s;
 }
