--- a/FPTEcommerce/src/main/resources/static/newcss/core.css
+++ b/FPTEcommerce/src/main/resources/static/newcss/core.css
@@ -155,6 +155,10 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   color: #566a7f;
 }
 
+.text_color{
+	 -webkit-text-fill-color: currentColor;
+}
+
 h1, .h1 {
   font-size: calc(1.3625rem + 1.35vw);
 }
