--- a/FPTEcommerce/src/main/resources/static/newcss/base.css
+++ b/FPTEcommerce/src/main/resources/static/newcss/base.css
@@ -42,6 +42,13 @@
 	-webkit-animation: preloader-fx 1.6s linear infinite;
 	animation: preloader-fx 1.6s linear infinite;
 }
+.text-logo{
+	padding-left: 7px;
+    font-family: 'Poppins';
+    font-size: 24px;
+    font-weight: 700;
+    vertical-align: -webkit-baseline-middle;
+}
 
 .preloader-icon span:last-child {
 	animation-delay: -0.8s;
@@ -987,7 +994,7 @@ button.swiper-pagination-bullet {
   justify-content: space-between;
   align-items: center;
   background-color: var(--white);
-  height: 55px;
+  height: 60px;
   border-bottom: 1px solid #54545400;
 }
 .header-bottom-left,
